@@ -44,6 +44,11 @@ from bzrlib.patches import (
 # 'unprintable'.
 
 
+# return codes from the bzr program
+EXIT_ERROR = 3
+EXIT_INTERNAL_ERROR = 4
+
+
 class BzrError(StandardError):
     """
     Base class for errors raised by bzrlib.
